tblte-common: Change ownership of wifi firmware reload sysfs paths
This will let the wifi hal run as wifi user and not need root
permissions to access this path for firmware reloads.

Change-Id: I2fcd62b1dd6cbe292d89cf97085c9549bf69ba23

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1206,6 +1206,9 @@ on boot
     chown bluetooth bluetooth /dev/btlock
 
 
+    # Set permissions for firmware path control
+    chown wifi wifi /sys/module/dhd/parameters/firmware_path
+
 # Services begin here
 
 service adsprpcd /system/bin/adsprpcd
