--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -30,6 +30,7 @@ import init.qcom.power.rc
 import init.trace.rc
 
 on early-init
+    export LD_SHIM_LIBS /system/lib/libcutils.so|libshim_cutils_atomic.so
     
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
@@ -1321,14 +1322,6 @@ service loc_launcher /system/bin/loc_launcher
     #loc_launcher will start as root and set its uid to gps
     class late_start
      group gps inet diag wifi
-    
-service ril-daemon /system/bin/rild
-    class main
-    socket rild stream 660 root radio
-    socket sap_uim_socket1 stream 660 bluetooth bluetooth
-    socket rild-debug stream 660 radio system
-    user root
-    group radio cache inet misc audio log wakelock oem_2901
 
 service macloader /system/vendor/bin/macloader
     class main
