--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -29,7 +29,7 @@ import init.qcom.usb.rc
 import init.qcom.power.rc
 
 on early-init
-    export LD_SHIM_LIBS /system/lib/libril.so|libshim_ril.so
+    export LD_SHIM_LIBS /system/vendor/lib/libril.so|libshim_ril.so
     
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
