tblte-common: add power/control to mmc0/1

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -55,6 +55,9 @@ on init
      write /proc/sys/vm/page-cluster 0
 
 on fs
+    write /sys/devices/msm_sdcc.1/mmc_host/mmc0/power/control on
+    write /sys/devices/msm_sdcc.2/mmc_host/mmc1/power/control on
+
     wait /dev/block/platform/${ro.boot.bootdevice}
     symlink /dev/block/platform/${ro.boot.bootdevice} /dev/block/bootdevice
     mount_all fstab.qcom
