--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1272,7 +1272,11 @@ service rfs_access /vendor/bin/rfs_access
 service qmuxd /vendor/bin/qmuxd
     class main
     user radio
-    group radio audio bluetooth wakelock gps 
+    group radio audio bluetooth wakelock gps
+
+service netmgrd /vendor/bin/netmgrd
+    class main
+    group radio 
 
 service mdm_helper /vendor/bin/mdm_helper
     user root
