--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1369,12 +1369,17 @@ service loc_launcher /vendor/bin/loc_launcher
     group gps inet diag wifi
     writepid /dev/cpuset/system-background/tasks
 
-service macloader /vendor/bin/macloader
+service macloader /system/vendor/bin/macloader
     class main
     user system
-    group wifi    
+    group wifi
     oneshot
 
+on property:init.svc.macloader=stopped
+    chown system root /data/.cid.info
+    chmod 0664 /data/.cid.info
+    chown system root /data/.rev
+    chmod 0664 /data/.rev
 # end of wifi
 
 on property:crypto.driver.load=1
