--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1589,7 +1589,7 @@ on property:ro.data.large_tcp_window_size=true
 
 service charger /charger
     class charger
-    seclabel u:r:healthd:s0
+    seclabel u:r:charger:s0
 
 service sec-sh /vendor/bin/sh /system/etc/init.sec.boot.sh
     class main
