--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -30,7 +30,7 @@ import init.qcom.power.rc
 import init.trace.rc
 
 on early-init
-    export LD_SHIM_LIBS /system/lib/libcutils.so|libshim_cutils_atomic.so:/system/lib/libcamera_client.so|libcamera_parameters_shim.so
+    export LD_SHIM_LIBS /system/lib/libcutils.so|libshim_cutils_atomic.so
  
 
     chmod 0755 /sys/kernel/debug
