tblte-common: fix all fatal error with NFC

--- a/configs/libnfc-sec.conf
+++ b/configs/libnfc-sec.conf
@@ -148,7 +148,7 @@ NFC_WAKE_DELAY=20
 ###############################################################################
 # Firmware patch file
 #  If the value is not set then patch download is disabled.
-# FW_PATCH="/vendor/firmware/sec_s3fnrn3_firmware.bin"
+#FW_PATCH="/vendor/firmware/sec_s3fnrn3_firmware.bin"
 
 ###############################################################################
 # Not used in S.LSI solution
@@ -317,6 +317,8 @@ SCREEN_OFF_POWER_STATE=3
 # detected.  The first byte is the length of the AID.  Maximum length is 16.
 AID_FOR_EMPTY_SELECT={08:A0:00:00:01:51:00:00:00}
 
+###############################################################################
+# NCI Hal Module name
 NCI_HAL_MODULE="nfc_nci"
 
 
