tblte-common: add sec-nfc to ueventd.qcom.rc

--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -195,6 +195,9 @@
 #nfc permissions
 /dev/nfc-nci              0660    nfc         nfc
 
+# NFC_SLSI
+/dev/sec-nfc              0660   nfc        nfc
+
 # UIO devices
 /dev/uio0                 0660   system     system
 /dev/uio1                 0660   system     system
