--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -30,7 +30,7 @@ import init.qcom.power.rc
 import init.trace.rc
 
 on early-init
-    export LD_SHIM_LIBS /system/lib/libcutils.so|libshim_cutils_atomic.so
+    export LD_SHIM_LIBS "/system/lib/libcutils.so|libshim_cutils_atomic.so"
  
 
     chmod 0755 /sys/kernel/debug
@@ -1392,7 +1392,7 @@ on property:ro.mdm_helper_proxy_req=true
 
 service wpa_supplicant  /system/vendor/bin/hw/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
-    -I/system/etc/wifi/wpa_supplicant_overlay.conf \
+    -I/system/vendor/etc/wifi/wpa_supplicant_overlay.conf \
     -O/data/misc/wifi/sockets \
     -m/data/misc/wifi/p2p_supplicant.conf \
     -puse_p2p_group_interface=1p2p_device=1 \
@@ -1402,7 +1402,7 @@ service wpa_supplicant  /system/vendor/bin/hw/wpa_supplicant \
     disabled
     oneshot
 
-service olsrd /system/vendor/bin/olsrd -f /etc/wifi/olsrd.conf
+service olsrd /system/vendor/bin/olsrd -f vendor/etc/wifi/olsrd.conf
     class main
     disabled
 
