--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -57,7 +57,7 @@ on init
     write /sys/block/zram0/comp_algorithm lz4
     write /sys/block/zram0/max_comp_streams 4
     
-     write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/page-cluster 0
 
 on fs
     wait /dev/block/platform/${ro.boot.bootdevice}
@@ -66,8 +66,7 @@ on fs
     write /sys/devices/msm_sdcc.1/mmc_host/mmc0/power/control on
     write /sys/devices/msm_sdcc.2/mmc_host/mmc1/power/control on
 
-    mount_all fstab.qcom  
-    swapon_all fstab.qcom
+    mount_all fstab.qcom
 
     # Keeping following partitions outside fstab file. As user may not have
     # these partition flashed on the device. Failure to mount any partition in fstab file
@@ -1425,6 +1424,9 @@ on property:sys.boot_completed=1
     write /sys/block/mmcblk0/queue/read_ahead_kb 128
     write /sys/block/mmcblk0/queue/iostats 1
     write /sys/block/dm-0/queue/read_ahead_kb 128
+    
+    # Enable ZRAM on boot_completed
+    swapon_all fstab.qcom
 
     # i/o scheduler
     setprop sys.io.scheduler "bfq"
